--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,8 +16,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<HeaderLink href="/about">About</HeaderLink>
 		</div>
 		<div class="social-links">
-			<a href="https://m.webtoo.ls/@astro" target="_blank">
-				<span class="sr-only">Follow Astro on Mastodon</span>
+			<a href="https://www.linkedin.com/in/ianleong/" target="_blank">
+				<span class="sr-only">Follow Ian on LinkedIn</span>
 				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
 					><path
 						fill="currentColor"
