--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		</div>
 		<div class="social-links">
 			<a href="https://www.linkedin.com/in/ianleong/" target="_blank">
-				<span class="sr-only">Follow Ian on LinkedIn</span>
+				<span class="sr-only">Follow Ian Leong on LinkedIn</span>
 				<svg viewBox="0 0 32 32" aria-hidden="true" width="32" height="32"
 					><path
 						fill="currentColor"
@@ -25,8 +25,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					></path></svg
 				>
 			</a>
-			<a href="https://twitter.com/astrodotbuild" target="_blank">
-				<span class="sr-only">Follow Astro on Twitter</span>
+			<a href="https://x.com/IanLeong" target="_blank">
+				<span class="sr-only">Follow Ian Leong on Twitter</span>
 				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
 					><path
 						fill="currentColor"
@@ -34,8 +34,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					></path></svg
 				>
 			</a>
-			<a href="https://github.com/withastro/astro" target="_blank">
-				<span class="sr-only">Go to Astro's GitHub repo</span>
+			<a href="https://github.com/IanLeong" target="_blank">
+				<span class="sr-only">Go to Ian Leong GitHub repo</span>
 				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
 					><path
 						fill="currentColor"
